# starkware-crypto-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: lint.yaml  test.yaml  test_unix.yaml  test_windows.yaml
benches/: ecdsa_get_public_key.rs  ecdsa_sign.rs  ecdsa_verify.rs  pedersen.rs
src/: build.rs  lib.rs
